--- a/miao/basic-coding.html
+++ b/miao/basic-coding.html
@@ -376,7 +376,7 @@
   }
 </script>
 
-<script type="norun" id="ch0103/21">
+<script type="norun" id="ch0104/21">
     var n = Number(prompt()) 
     var  x = Number(prompt()) 
     var  y = Number(prompt());
@@ -1019,9 +1019,10 @@
   var n = Number(prompt())
   v = Math.sqrt(n)
   for (var i = 2; i <= v; i++) {
-    if (n % i == 0)
+    if (n % i == 0) {
       console.log(n / i)
-    break
+      break
+    }
   }
 
 </script>
@@ -1066,8 +1067,8 @@
       break
     }
   } console.log(sum)
-
-
+</script>
+<script ztype="norun" id="ch0105/46">
   //接受一个n 判断是否为素数
   var isOdd = function (x) {
     if (x % 2 == 1) {
@@ -1085,22 +1086,10 @@
     if (n % 6 != 1 && n & 6 != 5) {
       return false
     }
-    for (var i = 1; i <= Math.sqrt_n; i++) {
-      if (n % i == 0) {
-        return false
-      }
-    }
-    return true
-  }
-  console.log(isprime(13))
-
-  //返回数值n 的十进制位宽
-  var digitwidth = function (n) {
-    var w = 0
-    if (n == 0) {
-      return digitwidth = 1
-    }
-    while (n > 0) {
+    for (var i = 1; i <= Math.sqrt_n; i++) { if (n % i == 0) { return false } } return true
+  } console.log(isprime(13)) //返回数值n
+  的十进制位宽 var digitwidth = function (n) {
+    var w = 0 if (n == 0) { return digitwidth = 1 } while (n > 0) {
       digit = n % 10
       n = (n - digit) / 10
       w++
@@ -1130,12 +1119,9 @@
       w++
     }
     n = u
-    if (w <= 2) {
-      return 'NO'
-    }
-    while (n > 0) {
+    if (w <= 2) { return 'NO' } while (n > 0) {
       digit = n % 10
-      sum += Math.pow(digit, w)  //次方增加
+      sum += Math.pow(digit, w) //次方增加
       n = (n - digit) / 10
     }
     if (sum == u) {
@@ -1152,8 +1138,7 @@
     var sum = 0
     var w = 0
     for (i = 0; i < n; i++) {
-      var u = i
-      while (u > 0) {
+      var u = i while (u > 0) {
         digit = u % 10
         u = (u - digit) / 10
         w++
@@ -1162,15 +1147,17 @@
       u = i
       while (u > 0) {
         digit = u % 10
-        sum += Math.pow(digit, w)  //次方增加
+        sum += Math.pow(digit, w) //次方增加
         u = (u - digit) / 10
       }
       w = 0
       if (sum == i) {
         console.log(i)
-      }
+      } else (sum = 0)
+
     }
   }
+      //palindrom: 写函数求阶乘
 
 </script>
 
